--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,4 +16,30 @@
   --color-neutral-grey: var(--neutral-grey);
 
   --font-roboto: var(--font-roboto);
+
+  --animate-shake:  shake 0.5s;
+  --animate-fade-in-up: fade-in-up 0.6s ease-out forwards;
+
+  @keyframes shake {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    10%, 30%, 50%, 70%, 90% {
+      transform: translateX(-2px);
+    }
+    20%, 40%, 60%, 80% {
+      transform: translateX(2px);
+    }
+  }
+
+  @keyframes fade-in-up {
+    0% {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 }
